--- a/projectone.html
+++ b/projectone.html
@@ -10,17 +10,18 @@
     <h1>Райдер Риппс</h1>
     <img src="./image-asset 1 (2).png" />
     <ul>
-      <a href="#">• Биография</a
-      ><br />
-      <a href="#">• Хо</a
-      ><br />
-
-      <a href="#">• Одиноки вместе</a
-      ><br />
-
-      <a href="#">• Ссылки</a
-      ><br />
+      <li>
+        <a href="#">Биография</a>
+        </li>
+        <li>
+        <a href="#">Хо</a>
+      </li>
+        <a href="#">Одиноки вместе</a>
+      </li>
+      <li><a href="#">Ссылки</a>
+    </li>
     </ul>
+
     <h2 id="#">Биография</h2>
     <p>
       Концептуальный художник, названный газетой Нью-Йорк Таймс «воплощением
@@ -63,11 +64,11 @@
       креслом и компьютером.
     </p>
     <h2 id="#">Ссылки</h2>
-    <a href="#">• Домашняя страница Райдера Риппса </a><br />
-    <a href="#">• «Вопль 2.0» (ремейк гимна битников)</a><br />
-    <a href="#">• Интерактивное инстаграм-портфолио</a><br />
-    <a href="#">• New York Times: An Artist of the Internet</a><br />
-    <a href="#">• Garage Magazine: Who Is Ryder Ripps</a>
+    <li><a href="#">Домашняя страница Райдера Риппса </a></li>
+    <li><a href="#">«Вопль 2.0» (ремейк гимна битников)</a></li>
+    <li> <a href="#">Интерактивное инстаграм-портфолио</a></li>
+    <li><a href="#">New York Times: An Artist of the Internet</a></li>
+    <li><a href="#">Garage Magazine: Who Is Ryder Ripps</a></li>
     <p>
       <strong
         >На сайте использована информация из Википедии и личной страницы Райдера
